--- a/src/UniversalButton/UniversalButton.module.css
+++ b/src/UniversalButton/UniversalButton.module.css
@@ -1,10 +1,10 @@
 .button {
     background-color: deepskyblue;
+    cursor: pointer;
     border-radius: 5px;
     font-size: 24px;
+    margin-left: 5px;
 }
-.block {
 
-}
 
 
