--- a/src/UniversalButton/UniversalButton.module.css
+++ b/src/UniversalButton/UniversalButton.module.css
@@ -2,9 +2,12 @@
     background-color: deepskyblue;
     cursor: pointer;
     border-radius: 5px;
-    font-size: 24px;
+    font-size: 20px;
     margin-left: 5px;
 }
 
+.button:disabled{
+    background: gray;
+}
 
 
