--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,26 @@
-.block {
-    background-color: deepskyblue;
+* {
+    box-sizing: border-box;
+}
+body{
+    background-color: #202c38;
+}
+.mainWrapper {
+    border: 1px solid #5490cb;
+    border-radius: 10px;
+    width: 350px;
+    height: 250px;
+    padding: 15px;
+}
+
+.buttonWrapper{
     display: flex;
-    border: 1px solid black;
-    width: 150px;
-    height: 50px;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    height:70px;
+    width: 250px;
+    border: 2px solid #5490cb;
+    border-radius: 10px ;
+    margin: 15px 0 0 25px;
+    padding: 0 50px;
 }
 
