--- a/src/Counter/DisplayCounter/DisplayCounter.module.css
+++ b/src/Counter/DisplayCounter/DisplayCounter.module.css
@@ -1,11 +1,13 @@
-.block {
+.displayCounter {
     display: flex;
-    border: 1px solid black;
-    width: 150px;
+    border: 2px solid #5490cb;
+    border-radius: 10px ;
+    width: 250px;
     height: 100px;
     justify-content: center;
     align-items: center;
-    background-color: deepskyblue;
+    background-color: #202c38;
+    margin: 15px 0 0 25px;
 }
 
 .red {
