--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 * {
     box-sizing: border-box;
 }
-body{
+
+body {
     background-color: #202c38;
 }
+
 .mainWrapper {
     border: 1px solid #5490cb;
     border-radius: 10px;
@@ -12,15 +14,44 @@ body{
     padding: 15px;
 }
 
-.buttonWrapper{
+.buttonWrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height:70px;
+    min-height: 70px;
     width: 250px;
-    border: 2px solid #5490cb;
-    border-radius: 10px ;
+    border: 1px solid #5490cb;
+    border-radius: 10px;
     margin: 15px 0 0 25px;
     padding: 0 50px;
 }
+
+.secondWrapper {
+    border: 1px solid #5490cb;
+    border-radius: 10px;
+    margin-top: 10px;
+    width: 350px;
+    height: 250px;
+    padding: 15px;
+}
+
+.inputWrapper {
+    border: 1px solid #5490cb;
+    border-radius: 10px;
+    height: 100px;
+    padding: 15px;
+}
+
+.buttonWrapperSet {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100px;
+    width: 318px;
+    border: 1px solid #5490cb;
+    border-radius: 10px;
+    margin-top: 10px;
+
+}
+
 
