add style error

--- a/src/Counter/DisplayForTheSecondCounter/DisplayInputSettingCounter.module.css
+++ b/src/Counter/DisplayForTheSecondCounter/DisplayInputSettingCounter.module.css
@@ -12,7 +12,6 @@
     font-size: 20px;
 }
 
-
 .displaySecond input {
     margin-left: 25px;
     height: 30px;
@@ -20,3 +19,9 @@
     border: 2px solid #5490cb;
     border-radius: 7px;
 }
+
+.errorInput {
+    background-color: #a31a1a;
+}
+
+
